refactor privacy policy
